<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh"
        android:orderInCategory="1"
        android:title="@string/action_create"
        android:icon="@drawable/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/create"
        android:orderInCategory="2"
        android:title="@string/action_create"
        android:icon="@drawable/plus_circle_outline"
        app:showAsAction="always" />
    <item
        android:id="@+id/open"
        android:orderInCategory="3"
        android:title="@string/action_open"
        android:icon="@drawable/open_in_new"
        app:showAsAction="always" />
    <item
        android:id="@+id/edit"
        android:orderInCategory="4"
        android:title="@string/action_edit"
        android:icon="@drawable/pencil"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete"
        android:orderInCategory="5"
        android:title="@string/action_delete"
        android:icon="@drawable/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="6"
        android:title="@string/action_settings"
        android:icon="@drawable/settings"
        app:showAsAction="always" />
</menu>